# Vilya

./: .coverage  .env.example  .gitignore  ARCH_SUMMARY.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: coldstart_training.csv
db/: schema.sql
db/migrations/: env.py
db/migrations/versions/: 0001_initial_schema.py
infra/: Dockerfile  docker-compose.dev.yml
models/: calibrator.pkl  metrics.json  model.pkl
scripts/: backfill_kalshi.py  backfill_weather.py  build_coldstart_dataset.py  train_model.py
src/: config.py  db.py
src/execution/: loop.py  order_manager.py  risk.py  signal.py
src/features/: engineering.py  forecast_store.py  pipeline.py
src/kalshi_client/: client.py  endpoints.py  models.py
src/models/: calibrate.py  predict.py  train.py
src/monitoring/: logger.py  metrics.py
src/weather_data/: models.py  nws_client.py  openweather_client.py
tests/: conftest.py  test_features.py  test_forecast_store.py  test_kalshi_client.py  test_loop.py  test_models.py  test_nws_client.py  test_openweather_client.py  test_order_manager.py  test_risk.py  test_signal.py
